Customized a lot more

--- a/css/custom.css
+++ b/css/custom.css
@@ -24,48 +24,6 @@ body {
 }
 /* End of margin for page when viewed on a screen with a width of at least 1080 pixels */
 
-/* Set maximum height for menu and background to a dark color */
-#menu {
-    max-height: 100%;
-    background-color: #212529;
-    padding: 1rem 0;
-    font-size: 13px;
-}
-/* End Set maximum height for menu and background to a dark color */
-
-/* Set color of menu labels to white */
-.menu-label {
-    color: white;
-}
-/* End Set color of menu labels to white */
-
-.nes-radio:checked+span::before {
-    color: white!important;
-}
-
-/* Set minimum height for text box so it does not have an expanding effect */
-.nes-container.is-rounded.is-dark.with-title {
-    min-height: 175px;
-}
-/* End set minimum height for text box so it does not have an expanding effect */
-
-/* Float selectable options to the right and add margin to the bottom so they don't overlap */
-.selections {
-    float: right;
-}
-.options {
-    padding-bottom: 30px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-/* End Float selectable options to the right and add margin to the bottom so they don't overlap */
-
-/* Move save and exit button to the right */
-.save-and-exit {
-    float: right;
-}
-/* End Move save and exit button to the right */
-
 /* Center main content */
 #display-content {
     /* The line below part does not seem to be needed for centering content but leaving
@@ -94,3 +52,47 @@ body {
 }
 /* End animate avatar fading in */
 
+/* Set minimum height for text box so it does not have an expanding effect */
+.nes-container.is-rounded.is-dark.with-title {
+    min-height: 175px;
+}
+/* End set minimum height for text box so it does not have an expanding effect */
+
+
+/* Blinking effect for arrow */
+.blink {
+    -webkit-animation: 2s linear infinite condemned_blink_effect; /* for Safari 4.0 - 8.0 */
+    animation: 2s linear infinite condemned_blink_effect;
+}
+/* for Safari 4.0 - 8.0 */
+@-webkit-keyframes condemned_blink_effect { 
+    0% {
+        visibility: hidden;
+    }
+    50% {
+        visibility: hidden;
+    }
+    100% {
+        visibility: visible;
+    }
+}
+@keyframes condemned_blink_effect {
+    0% {
+        visibility: hidden;
+    }
+    50% {
+        visibility: hidden;
+    }
+    100% {
+        visibility: visible;
+    }
+}
+/* End blinking effect for arrow */
+
+/* Place arrow at bottom right of text box */
+#down-arrow {
+    position: fixed;
+    bottom: 40px;
+    right: 40px;
+}
+/* End place arrow at bottom right of text box */
