Resize font size for cards on mid size resolutions so text does not overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,10 @@ html {
     .uk-card-footer {
         font-size: 13px;
     }
+}
+
+@media (max-width: 1400px) {
     .project-links {
-        font-size: 10px;
+        font-size: 11px;
     } 
 }
