Added header to projects. Changed projects and filter buttons to have rounded borders. Removed games from main home page as it should only be on the games page

--- a/css/style.css
+++ b/css/style.css
@@ -29,3 +29,11 @@ html {
         font-size: 11px;
     } 
 }
+
+.rounded-border {
+    border-radius: 6px;
+}
+
+.about-me {
+    margin-bottom: 25px;
+}
