--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,13 @@
 /* Change background color to be a gradient on browsers that support it */
 html {
     background: rgb(240,63,63);
-background: linear-gradient(0deg, rgba(240,63,63,0.14874141876430202) 0%, rgba(198,91,14,0.15102974828375282) 49%, rgba(255,199,0,0.06407322654462244) 100%);
+    background: linear-gradient(0deg, rgba(240,63,63,0.14874141876430202) 0%, rgba(198,91,14,0.15102974828375282) 49%, rgba(255,199,0,0.06407322654462244) 100%);
+}
+@media (max-height: 699px) {
+    html {
+        background: rgb(240,63,63);
+        background: radial-gradient(circle, rgba(240,63,63,0.14874141876430202) 0%, rgba(198,91,14,0.15102974828375282) 49%, rgba(255,199,0,0.06407322654462244) 100%)!important;
+    }
 }
 
 /* Remove the default border on filter options */
