Add margin top to commit on smaller screens
- On screens up to 1099px width, add margin-top of 30px to commit
  details

--- a/css/style.css
+++ b/css/style.css
@@ -105,3 +105,10 @@ so we scroll to the correct location taking the navbar into account */
     }
 }
 /* End fade table in  */
+
+
+@media (max-width: 1199px) {
+    .commit-details {
+        margin-top: 30px;
+    }
+}
