--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,14 @@ so we scroll to the correct location taking the navbar into account */
         opacity: 1;
     }
 }
-/* End fade table in  */
-
+/* End fade sentences in  */
 
 @media (max-width: 1199px) {
     .commit-details {
         margin-top: 30px;
     }
 }
+
+/* Style scrollbar */
+
+/* End style scrollbar */
