--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,9 @@ so we scroll to the correct location taking the navbar into account */
     margin-bottom: 0px;
 }
 /* End normalize H1 tag */
+
+/* Slow down animation of button hover to match project hover */
+.uk-subnav>*>:first-child { 
+    transition: 0.3s ease-in-out;
+}
+/* End Slow down animation of button hover to match project hover */
