--- a/css/style.css
+++ b/css/style.css
@@ -133,32 +133,18 @@ so we scroll to the correct location taking the navbar into account */
 }
 /* End Style send message button with border color and transition */
 
-/* Popout animation on projects */
+/* Classes we'll use with Javascript to animate popout effect */
+.waiting-for-popout {
+    transform: scale(1);
+    -webkit-transform: scale(1)!important;
+    transition: 0.3s;
+}
 .popout {
-    animation: endpopout .3s ease forwards;
-    -webkit-animation: endpopout .3s ease forwards;
+    transform: scale(1.1)!important;
+    -webkit-transform: scale(1.1)!important;
+    transition: 0.3s;
 }
-.popout:hover {
-    animation: popout .3s ease forwards;
-    -webkit-animation: popout .3s ease forwards;
-}
-@keyframes popout {
-    from{transform:scale(1)}
-    to{transform:scale(1.1)}
-}
-@-webkit-keyframes popout {
-    from{-webkit-transform:scale(1)}
-    to{-webkit-transform:scale(1.1)}
-}
-@keyframes endpopout {
-    from{transform:scale(1.1)}
-    to{transform:scale(1)}
-}
-@-webkit-keyframes endpopout {
-    from{transform:scale(1.1)}
-    to{transform:scale(1)}
-}
-/* End popout animation on projects */
+/* End classes we'll use with Javascript to animate popout effect */
 
 /* Reset project details styles */
 .project-details-header {
